fix(scroll): main content z-index

--- a/src/modules/layout/layout.css
+++ b/src/modules/layout/layout.css
@@ -20,6 +20,7 @@
 }
 #main-content-container {
     flex-wrap: wrap !important;
+    z-index: 1;
 }
 #main-content-container:focus-visible {
     outline: none;
